...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />



    <EditText
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="135dp"
        android:layout_alignRight="@+id/buttonLogin"
        android:layout_alignLeft="@+id/buttonLogin">

        <requestFocus />
    </EditText>


...
